# Descriptive_Analysis_of_ECG_Record

./: .gitignore  LICENSE  PAC_percent.csv  PVC_percent.csv  README.md  Records for Total No of 30seconds Segments for each record.csv  descriptive_analysis.ipynb  ecg_data.py  introduction-to-langchain.ipynb  pyproject.toml  requirement.txt  rhythm_segmentation.py  setup.py  streamlitApp.py
ecg_analysis_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py
src/app/: __init__.py  streamlitApp.py  streamlit_app.py
src/processing/: __init__.py  read_record.py  rhythm_segmentation.py
